# wagtail-context-search

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPER.md  INSTALLATION.md  USAGE.md
tests/: __init__.py  settings.py  test_backends.py  test_commands.py  test_integration.py  test_retrieval.py  urls.py
wagtail_context_search/: __init__.py  admin.py  apps.py  context_processors.py  middleware.py  models.py  settings.py  signals.py  urls.py  utils.py  views.py
wagtail_context_search/backends/: __init__.py  base.py
wagtail_context_search/backends/embedder/: __init__.py  base.py  openai.py  sentence_transformers.py
wagtail_context_search/backends/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
wagtail_context_search/backends/vector_db/: __init__.py  base.py  chroma.py  meilisearch.py  pgvector.py  qdrant.py
wagtail_context_search/core/: __init__.py  chunker.py  generator.py  prompt_templates.py  retrieval.py
wagtail_context_search/management/: __init__.py
wagtail_context_search/management/commands/: rag_debug.py  rag_fix_meilisearch.py  rag_index.py  rag_reindex_vector_db.py  rag_remove.py  rag_sync.py
wagtail_context_search/migrations/: 0001_initial.py
wagtail_context_search/static/wagtail_context_search/css/: assistant.css
wagtail_context_search/static/wagtail_context_search/js/: assistant.js
wagtail_context_search/templates/wagtail_context_search/: assistant_widget.html
wagtail_context_search/templatetags/: __init__.py  rag_assistant.py
